# donk

./: .clang-format  BUILD.bazel  README.md  WORKSPACE.bazel  defs.bzl
api/: BUILD.bazel  README.md  client.cc  client.h  database.cc  database.h  datum.cc  datum.h  exception.cc  exception.h  generator.cc  generator.h  icon.cc  icon.h  image.cc  image.h  list.cc  list.h  matrix.cc  matrix.h  mutable_appearance.cc  mutable_appearance.h  particles.cc  particles.h  regex.cc  regex.h  root.cc  root.h  savefile.cc  savefile.h  sound.cc  sound.h  world.cc  world.h
api/database/: query.cc  query.h
api/datum/: atom.cc  atom.h
api/datum/atom/: area.cc  area.h  movable.cc  movable.h  turf.cc  turf.h
api/datum/atom/movable/: mob.cc  mob.h  obj.cc  obj.h
core/: BUILD.bazel  README.md  args.cc  args.h  assoc_list.cc  assoc_list.h  ctxt.cc  ctxt.h  generator.h  icon.h  interpreter.h  iota.cc  iota.h  path.cc  path.h  path_test.cc  prefab.h  preset.h  procs.cc  procs.h  resource.h  utils.h  vars.cc  vars.h
image/: BUILD.bazel  README.md  dmi_reader.cc  dmi_reader.h  import_icon_file.h
interpreter/: BUILD.bazel  ecs_manager.cc  ecs_manager.h  importer.cc  importer.h  interpreter.cc  interpreter.h  running_task.cc  running_task.h  scheduler.cc  scheduler.h  task_stack.cc  task_stack.h  timekeeper.h
interpreter/environment/: BUILD.bazel  environment.h  filesystem_environment.cc  filesystem_environment.h  runfiles_environment.cc  runfiles_environment.h
interpreter/runner/: BUILD.bazel  runner.cc  runner.h
mapping/: BUILD.bazel  README.md  import_map_file.h  map_roster.h  map_tile.h  map_view.h  tgm_parser.cc  tgm_parser.h
