# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//:defs.bzl", "DARWIN_DEFAULT_COPTS", "WINDOWS_DEFAULT_COPTS")

cc_library(
    name = "api",
    srcs = [
        "client.cc",
        "database.cc",
        "database/query.cc",
        "datum.cc",
        "datum/atom.cc",
        "datum/atom/area.cc",
        "datum/atom/movable.cc",
        "datum/atom/movable/mob.cc",
        "datum/atom/movable/obj.cc",
        "datum/atom/turf.cc",
        "exception.cc",
        "icon.cc",
        "image.cc",
        "list.cc",
        "matrix.cc",
        "mutable_appearance.cc",
        "regex.cc",
        "root.cc",
        "savefile.cc",
        "sound.cc",
        "world.cc",
    ],
    hdrs = [
        "client.h",
        "database.h",
        "database/query.h",
        "datum.h",
        "datum/atom.h",
        "datum/atom/area.h",
        "datum/atom/movable.h",
        "datum/atom/movable/mob.h",
        "datum/atom/movable/obj.h",
        "datum/atom/turf.h",
        "exception.h",
        "icon.h",
        "image.h",
        "list.h",
        "matrix.h",
        "mutable_appearance.h",
        "regex.h",
        "root.h",
        "savefile.h",
        "sound.h",
        "world.h",
    ],
    copts = select({
        "//:windows": WINDOWS_DEFAULT_COPTS,
        "//:darwin": DARWIN_DEFAULT_COPTS,
    }),
    include_prefix = "donk/api",
    visibility = ["//visibility:public"],
    deps = [
        "@cppcoro",
        "@donk//core",
        "@donk//mapping",
        "@peglib",
        "@spdlog",
    ],
)
