# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//:defs.bzl", "DARWIN_DEFAULT_COPTS", "WINDOWS_DEFAULT_COPTS")

cc_library(
    name = "core",
    srcs = [
        "args.cc",
        "assoc_list.cc",
        "ctxt.cc",
        "iota.cc",
        "path.cc",
        "procs.cc",
        "vars.cc",
    ],
    hdrs = [
        "assoc_list.h",
        "icon.h",
        "interpreter.h",
        "iota.h",
        "path.h",
        "prefab.h",
        "preset.h",
        "procs.h",
        "resource.h",
        "utils.h",
        "vars.h",
    ],
    copts = select({
        "//:windows": WINDOWS_DEFAULT_COPTS,
        "//:darwin": DARWIN_DEFAULT_COPTS,
    }),
    include_prefix = "donk/core",
    visibility = ["//visibility:public"],
    deps = [
        "@cppcoro",
        "@fmtlib",
        "@spdlog",
    ],
)

cc_test(
    name = "path_test",
    srcs = ["path_test.cc"],
    deps = [
        ":core",
        "@boost_ext_ut",
        "@fmtlib",
    ],
)
