# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//:defs.bzl", "DARWIN_DEFAULT_COPTS", "WINDOWS_DEFAULT_COPTS")

cc_library(
    name = "image",
    srcs = [
        "dmi_parser.cc",
        "dmi_reader.cc",
    ],
    hdrs = [
        "dmi_parser.h",
        "dmi_reader.h",
        "import_icon_file.h",
    ],
    copts = select({
        "//:windows": WINDOWS_DEFAULT_COPTS,
        "//:darwin": DARWIN_DEFAULT_COPTS,
    }),
    include_prefix = "donk/image",
    visibility = ["//visibility:public"],
    deps = [
        "@fmtlib",
        "@libpng",
        "@peglib",
        "@spdlog",
    ],
)
