# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//:defs.bzl", "DARWIN_DEFAULT_COPTS", "WINDOWS_DEFAULT_COPTS")

cc_library(
    name = "interpreter",
    srcs = [
        "ecs_manager.cc",
        "importer.cc",
        "interpreter.cc",
        "scheduler.cc",
    ],
    hdrs = [
        "ecs_manager.h",
        "importer.h",
        "interpreter.h",
        "scheduler.h",
        "timekeeper.h",
    ],
    copts = select({
        "//:windows": WINDOWS_DEFAULT_COPTS,
        "//:darwin": DARWIN_DEFAULT_COPTS,
    }),
    include_prefix = "donk/interpreter",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@cppcoro",
        "@donk//api",
        "@donk//core",
        "@donk//image",
        "@entt",
        "@fmtlib",
        "@spdlog",
    ],
)
