# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//:defs.bzl", "WINDOWS_DEFAULT_COPTS", "DARWIN_DEFAULT_COPTS")

cc_library(
    name = "mapping",
    srcs = [
        "tgm_parser.cc",
    ],
    hdrs = [
        "map_view.h",
        "tgm_parser.h",
    ],
    copts = select({
        "//:windows": WINDOWS_DEFAULT_COPTS,
        "//:darwin": DARWIN_DEFAULT_COPTS,
    }),
    include_prefix = "donk/mapping",
    visibility = ["//visibility:public"],
    deps = [
        "@donk//core",
        "@peglib",
        "@spdlog",
    ],
)
