# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//:defs.bzl", "WINDOWS_DEFAULT_COPTS", "DARWIN_DEFAULT_COPTS")

cc_binary(
    name = "runner",
    srcs = [
        "runner.cc",
        "runner.h",
    ],
    copts = select({
        "//:windows": WINDOWS_DEFAULT_COPTS,
        "//:darwin": DARWIN_DEFAULT_COPTS,
    }),
    deps = [
        "@donk//api",
        "@donk//core",
        "@donk//interpreter",
        "@tgcc",
        "@spdlog",
    ],
)
