# Donk Project
# Copyright (c) 2021 Warriorstar Orion <orion@snowfrost.garden>
# SPDX-License-Identifier: MIT
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//:defs.bzl", "DARWIN_DEFAULT_COPTS", "WINDOWS_DEFAULT_COPTS")

cc_binary(
    name = "runner",
    srcs = [
        "runner.cc",
        "runner.h",
    ],
    copts = select({
        "//:windows": WINDOWS_DEFAULT_COPTS,
        "//:darwin": DARWIN_DEFAULT_COPTS,
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@donk//api",
        "@donk//core",
        "@donk//interpreter",
        "@spdlog",
        "@dtpo",
    ],
)
